refactor(controller): minor cleanup in controllers and AttendeeCommandService
- Update import statements and minor code adjustments
- Improve code consistency across controllers